// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BhAutocomplete.vue focus on input press esc renders correctly 1`] = `
<bhinput-stub>
  <div class="bh-autocomplete">
    <!----> <input id="autocomplete" autocomplete="off" type="text" class="bh-autocomplete__input"> </div>
  <!---->
</bhinput-stub>
`;

exports[`BhAutocomplete.vue focus on input renders correctly 1`] = `
<bhinput-stub>
  <div class="bh-autocomplete">
    <!----> <input id="autocomplete" autocomplete="off" type="text" class="bh-autocomplete__input"> </div>
  <div class="bh-autocomplete__list"><button type="button" class="bh-autocomplete__list__item"><b></b>a<b></b></button><button type="button" class="bh-autocomplete__list__item"><b></b>a<b></b>b<b></b></button><button type="button" class="bh-autocomplete__list__item"><b></b>a<b></b>b<b></b>c<b></b>d<b></b></button><button type="button" class="bh-autocomplete__list__item"><b></b>b<b></b></button><button type="button" class="bh-autocomplete__list__item"><b></b>c<b></b></button></div>
</bhinput-stub>
`;

exports[`BhAutocomplete.vue renders correctly 1`] = `
<bhinput-stub>
  <div class="bh-autocomplete">
    <!----> <input id="autocomplete" autocomplete="off" type="text" class="bh-autocomplete__input"> </div>
  <!---->
</bhinput-stub>
`;

exports[`BhAutocomplete.vue using verboseField and indexField type "b" in input renders correctly 1`] = `
<bhinput-stub>
  <div class="bh-autocomplete">
    <!----> <input id="autocomplete" autocomplete="off" type="text" class="bh-autocomplete__input"> </div>
  <!---->
</bhinput-stub>
`;
